# smartcar-project

./: .gitignore  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  Main.qml  README.md  main.cpp
ESP-SMART-CAR/: ESP-SMART-CAR.ino
android/: AndroidManifest.xml
